# AdOpT_TechnologyDatabase

./: README.md  main.py  pyproject.toml
technology_database/: __init__.py  available_data.json  component.py  component_factory.py  utilities.py
technology_database/networks/: __init__.py  co2_pipeline.py
technology_database/networks/data/co2_pipeline/: OtherData.xlsx
technology_database/technologies/: __init__.py  dac.py
